
Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: yyyy/mm/dd
Description:

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/08/17
Description:
Added patches to support OpenBSD on PPC.  The patches were contributed
by Jasper Lievisse Adriaanse (fixes bug #124).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/08/17
Description:
Use mkstemp to implement OS.FileSys.tmpName() on systems that support
it (should be all modern versions of Unix).  This change fixes bug #128.
(Thanks to Johannes 5 Joemann).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/08/17
Description:
Fixed a bug in IntInf.~>>, which did not handle negative arguments
correctly (bug #110).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/08/14
Description:
Fixed a problem in the CPS contraction phase.  An optimization that
eliminates construction of a record that already exists was not
checking that the existing record was the same record kind (bug #119).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/07/28
Description:
Switch to using MAP_ANONYMOUS to allocate memory on Linux systems.
This change avoids problems when "/dev" does not support execute
permission (as seems to be the case with some versions of Linux
running on ChromeBooks; bug #120).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2014/06/28
Description: